# voicetype-mvp

./: .gitignore  README.md  Start VoiceType.command  project_context.md  pyproject.toml
src/voicetype_mvp/: __init__.py  __main__.py  app.py  hotkey.py  paste.py  permissions.py  recorder.py  transcriber.py
