[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voicetype-mvp"
version = "0.1.0"
description = "Minimal local hold-to-talk dictation prototype for macOS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "numpy>=1.24",
    "pyperclip>=1.8",
    "pynput>=1.7",
    "rumps>=0.4",
    "sounddevice>=0.4",
]

[project.scripts]
voicetype-mvp = "voicetype_mvp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
